[package]
name = "osprey"
version = "0.3.0"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/osprey"
description = "Gluon bindings for Falcon"
license = "Apache-2.0"

[dependencies]
clap = "2.26"
falcon = { git="https://github.com/falconre/falcon", branch="0.3.0" }
gluon = "0.7.1"
gluon_vm = "0.7.1"

[[bin]]
name = "osprey"
path = "src/main.rs"

[lib]
name = "osprey"
path = "lib/lib.rs"