[package]
name = "osprey"
version = "0.4.0"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/osprey"
description = "Gluon bindings for Falcon"
license = "Apache-2.0"

[dependencies]
clap = "2.26"
falcon = {version="0.4.0", features=["thread_safe"]}
gluon = "0.8"
gluon_vm = "0.8"

[[bin]]
name = "osprey"
path = "src/main.rs"

[lib]
name = "osprey"
path = "lib/lib.rs"