[package]
name = "osprey"
version = "0.4.4"
authors = [ "Alex Eubanks <endeavor@rainbowsandpwnies.com>" ]
repository = "https://github.com/falconre/osprey"
description = "Gluon bindings for Falcon"
license = "Apache-2.0"

[dependencies]
clap = "2.26"
falcon = {version="0.4.4", features=["thread_safe"]}
gluon = "0.9.4"
gluon_vm = "0.9.4"

[[bin]]
name = "osprey"
path = "src/main.rs"

[lib]
name = "osprey"
path = "lib/lib.rs"
